--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
     --fc-black-text: #121619;
+    --fc-white-text: #f6f6f6;
     --fc-gray: #999999;
 
     --c-primary: #fd9d3e;
